─────────────────┨ 0.5.1 ┠─────────────────
1) Added different modes of file sorting (Unicode-friendly)

2) Small refactoring plus checking if the source dir exists.

─────────────────┨ 0.5.0 ┠─────────────────
1) Most rules are covered with tests now.

2) ICU library is used now for uppercase/lowercase text transforms

─────────────────┨ 0.4.0 ┠─────────────────
1) Some template magic in the configuration parser. It should make adding
new rules easier and less error-prone.

2) New "rule": replace. Search and replace all occurrences of the
substring to the new string in the CURRENT UNFINISHED FILENAME. It is
a new type of rules.

3) Now files are alphabetically sorted before processing.

4) Tests. Nothing for users, but I expect a slightly less amount of errors
in the code.

5) Documentation now is more... better.

─────────────────┨ 0.3.0 ┠─────────────────
New "rule": filename. Just an original filename without an extension.
New "rule": filesize.
Readme fix: text->ext typo.