@@ -1,3 +1,9 @@
+─────────────────┨ 0.5.2 ┠─────────────────
+1) New parameter for disabling file processing confirmation.
+May be useful for scripts.
+
+2) Nice progress bar
+
 ─────────────────┨ 0.5.1 ┠─────────────────
 1) Added different modes of file sorting (Unicode-friendly)
 
